Split the analysis engine into its three phases
AnalysisEngine had grown to 944 lines and four jobs: ordering the phases,
discovering mutants, gathering coverage, and executing mutants — plus the
diagnostics for each, ten timing accumulators, and a nested Worker with its own
JVM lifecycle. Nothing about the coverage phase and the execution phase needed
to be in the same file, and being there meant every field was in scope for both.

It is now the phase order plus discovery and its diagnostics, at 265 lines, with
CoverageCollector (239) and MutantExecutor (475) either side. Coverage and
ClassUnderTest, which both phases pass between them, become top-level records.

Changes that are more than moving code:

- PhaseTimings replaces ten AtomicLong/AtomicInteger fields and two blocks of
  hand-written nanos-to-millis conversion. Adding a measurement was three edits
  in three places; it is now one call at the site being measured.

- executionActivate was always reported as 0. Its accumulator was never written
  to — a leftover from when activating a schemata mutant was its own round trip,
  before profiling folded it into runTests. A metric nothing updates reads as
  "this costs nothing measured" rather than "nothing measures this", so it is
  gone rather than fixed.

- Coverage.failingTests was a List, and selectFor did a linear contains() over
  it for every covering test of every mutant. It is a Set.

- Test selection ran three times per mutant, each time sorting: once to consult
  the cache, once to size the worker pool, once to run the tests. It is computed
  once per mutant now, which also means the three cannot disagree about which
  tests a mutant has.

- moduleById was a stream scan over every module, called once per module group
  per mutant. It is a map built once.

- Worker kept installedClass, installedSchemata and installedIndices as three
  fields that had to be set and cleared together, which prepareSchemata did in
  four assignments. They are one Installe